crates/reap-feed/tests/ui/run_connection_once_is_private.rs
use reap_feed::run_connection_once;

fn main() {
    let _ = run_connection_once;
}
